Mer testvennlig bruk av annotering, oppdatert rest og felles, skjult repo (#212)