@@ -1,5 +1,6 @@
 package no.nav.vedtak.felles.prosesstask.impl;
 
+import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.temporal.ChronoUnit;
 import java.util.Arrays;
@@ -13,8 +14,8 @@ import org.junit.jupiter.api.extension.RegisterExtension;
 import org.mockito.Mockito;
 
 import no.nav.vedtak.felles.prosesstask.JpaExtension;
+import no.nav.vedtak.felles.prosesstask.api.CommonTaskProperties;
 import no.nav.vedtak.felles.prosesstask.api.ProsessTaskData;
-import no.nav.vedtak.felles.prosesstask.api.ProsessTaskRepository;
 import no.nav.vedtak.felles.prosesstask.api.ProsessTaskStatus;
 import no.nav.vedtak.felles.prosesstask.api.TaskType;
 
@@ -34,53 +35,58 @@ public class ProsessTaskRepositoryImplIT {
     private ProsessTaskRepository prosessTaskRepository;
 
     @BeforeEach
-    public void setUp() throws Exception {
+    public void setUp() {
         ProsessTaskEventPubliserer prosessTaskEventPubliserer = Mockito.mock(ProsessTaskEventPubliserer.class);
         Mockito.doNothing().when(prosessTaskEventPubliserer).fireEvent(Mockito.any(ProsessTaskData.class), Mockito.any(), Mockito.any(), Mockito.any(), Mockito.any());
-        prosessTaskRepository = new ProsessTaskRepositoryImpl(repoRule.getEntityManager(), null, prosessTaskEventPubliserer);
+        prosessTaskRepository = new ProsessTaskRepository(repoRule.getEntityManager(), null, prosessTaskEventPubliserer);
 
         lagTestData();
     }
 
     @Test
-    public void test_ingen_match_innenfor_et_kjøretidsintervall() throws Exception {
-        List<ProsessTaskStatus> statuser = Arrays.asList(ProsessTaskStatus.values());
-        List<ProsessTaskData> prosessTaskData = prosessTaskRepository.finnAlle(statuser, NÅ.minusMinutes(58), NÅ);
+    public void test_ingen_match_innenfor_et_kjøretidsintervall() {
+        List<ProsessTaskStatus> statuser = Arrays.stream(ProsessTaskStatus.values()).filter(ProsessTaskStatus::erIkkeFerdig).toList();
+        List<ProsessTaskData> prosessTaskData = prosessTaskRepository.finnAlle(statuser);
+
+        Assertions.assertThat(prosessTaskData).hasSize(6);
+    }
+
+    @Test
+    public void test_ingen_match_for_angitt_prosesstatus() {
+        List<ProsessTaskStatus> statuser = List.of(ProsessTaskStatus.VETO);
+        List<ProsessTaskData> prosessTaskData = prosessTaskRepository.finnAlle(statuser);
 
         Assertions.assertThat(prosessTaskData).isEmpty();
     }
 
     @Test
-    public void test_har_match_innenfor_et_kjøretidsntervall() throws Exception {
-        List<ProsessTaskStatus> statuser = Arrays.asList(ProsessTaskStatus.values());
-        List<ProsessTaskData> prosessTaskData = prosessTaskRepository.finnAlle(statuser, NÅ.minusHours(2), NÅ.minusHours(1));
+    public void test_skal_finne_tasks_som_matcher_angitt_søk() {
 
-        Assertions.assertThat(prosessTaskData).hasSize(1);
-        Assertions.assertThat(prosessTaskData.get(0).getStatus()).isEqualTo(ProsessTaskStatus.FERDIG);
-    }
-
-    @Test
-    public void test_ingen_match_for_angitt_prosesstatus() throws Exception {
-        List<ProsessTaskStatus> statuser = Arrays.asList(ProsessTaskStatus.SUSPENDERT);
-        List<ProsessTaskData> prosessTaskData = prosessTaskRepository.finnAlle(statuser, NÅ.minusHours(2), NÅ);
-
-        Assertions.assertThat(prosessTaskData).isEmpty();
-    }
-
-    @Test
-    public void test_skal_finne_tasks_som_matcher_angitt_søk() throws Exception {
-
-        List<ProsessTaskStatus> statuser = Arrays.asList(ProsessTaskStatus.SUSPENDERT);
-        List<ProsessTaskData> prosessTaskData = prosessTaskRepository.finnAlleForAngittSøk(statuser, null, nesteKjøringEtter, nesteKjøringEtter, "fagsakId=1%behandlingId=2%");
+        List<ProsessTaskStatus> statuser = List.of(ProsessTaskStatus.SUSPENDERT);
+        List<ProsessTaskData> prosessTaskData = prosessTaskRepository.finnAlle(statuser);
 
         Assertions.assertThat(prosessTaskData).hasSize(1);
     }
 
     @Test
-    public void test_restart_alle() throws Exception {
+    public void test_restart_alle() {
         int restartet = prosessTaskRepository.settAlleFeiledeTasksKlar();
 
         Assertions.assertThat(restartet).isEqualTo(1);
+    }
+
+    @Test
+    public void test_hent_feilet_id() {
+        var feilet = prosessTaskRepository.hentIdForAlleFeilet();
+
+        Assertions.assertThat(feilet).hasSize(1);
+    }
+
+    @Test
+    public void test_søk() {
+        var tasks = prosessTaskRepository.finnAlleForAngittSøk(CommonTaskProperties.BEHANDLING_ID + "=2", LocalDate.now().minusMonths(1), LocalDate.now());
+
+        Assertions.assertThat(tasks).hasSize(7);
     }
 
     private void lagTestData() {
@@ -126,6 +132,7 @@ public class ProsessTaskRepositoryImplIT {
         }
 
         ProsessTaskEntitet pte = new ProsessTaskEntitet();
+        pte.setOpprettetTid(LocalDateTime.now());
         return pte.kopierFraEksisterende(data);
     }
 
